# saferoute

./: .gitignore  README.md
southampton_crime_map_backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  railpack.json  start.sh
southampton_crime_map_backend/app/: __init__.py  celery_app.py  config.py  dependencies.py  main.py
southampton_crime_map_backend/app/api/v1/: auth.py  (+4 more)
southampton_crime_map_backend/app/core/: exceptions.py  logging_config.py  middleware.py  rate_limit.py  security.py
southampton_crime_map_backend/app/db/: __init__.py  base.py
southampton_crime_map_backend/app/ingestion/: __init__.py  cli.py  crime_ingester.py  grid_builder.py  police_api.py
southampton_crime_map_backend/app/models/: __init__.py  crime.py  route.py  user.py
southampton_crime_map_backend/app/repositories/: crime_repository.py  route_repository.py  user_repository.py
southampton_crime_map_backend/app/schemas/: auth.py  history.py  route.py  safety.py  user.py
southampton_crime_map_backend/app/services/: auth_service.py  cache_service.py  history_service.py  route_safety_service.py  routing_service.py  safety_service.py  user_service.py
southampton_crime_map_backend/app/tasks/: ingestion_tasks.py
southampton_crime_map_backend/app/utils/: geometry.py  scoring.py  segmentation.py
southampton_crime_map_backend/docker/: Dockerfile
southampton_crime_map_backend/docs/: CELERY_SETUP.md  SCORING_ALGORITHM.md  openapi.json
southampton_crime_map_backend/scripts/: celery_beat.sh  celery_worker.sh  ingest_crime_data.py  init_db.py  populate_crime_categories.py  retention_job.py  setup_database.py  test-live.sh  verify-setup.sh
southampton_crime_map_backend/tests/: conftest.py
southampton_crime_map_backend/tests/e2e/: test_complete_user_journey.py
(+40 files in other folders)
